--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,11 @@
+# wrangler.toml
 name = "tron-usdt-transfer-bot"
 compatibility_date = "2025-11-14"
 compatibility_flags = ["nodejs_compat"]
 main = "index.js"
 
-[dependencies]
-tronweb = "^4.4.0"
+[[dependencies]]
+package = "tronweb"
 
 [triggers]
 crons = ["*/10 * * * *"]
